# abstract_programming

./: .gitignore  CMakeLists.txt  baza
src/: Consts.h  DatabaseContext.h  Types.h  main.cpp
src/accessors/: DataAccessor.h  IndexAccessor.h
src/command_line/: CommandLine.h  CommandLineInterface.h  EvaluationNodeFactory.h  EvaluationTree.h  Query.h  QueryData.h  evaluation.h
src/file/: AbstractReader.h  Allocator.h  BinaryFileHandler.h  BinaryReader.h  DataReader.h  DataTypeHandler.h  DataWriter.h  FileHandler.h  Handler.h  RecordReader.h  SimpleReader.h  StringReader.h
src/model/: AbstractAttribute.h  Attribute.h  Block.h  DBSchema.h  ResultSet.h  TableAttribute.h  TableDefinition.h
src/model/block/: Block.h
src/model/data_type/: BinaryDataType.h  DataType.h  IntDataType.h  RealDataType.h  StringDataType.h
src/model/db_schema/: DBSchema.h
src/model/table/: TableAttribute.h  TableDefinition.h
src/parser/: DBSchemaParser.h  TableHandler.h
